--- a/train/requirements.txt
+++ b/train/requirements.txt
@@ -1,10 +1,12 @@
 absl-py==0.7.1
 appnope==0.1.0
+astetik==1.9.8
 astor==0.8.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
 certifi==2019.6.16
+chances==0.1.6
 chardet==3.0.4
 colorama==0.4.1
 cycler==0.10.0
@@ -12,6 +14,7 @@ decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
 gast==0.2.2
+geonamescache==1.0.2
 google-pasta==0.1.7
 grpcio==1.21.1
 h5py==2.9.0
@@ -22,6 +25,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 jedi==0.13.3
 Jinja2==2.10.1
+joblib==0.13.2
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -30,10 +34,11 @@ jupyter-core==4.4.0
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+kerasplotlib==0.1.4
 kiwisolver==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
-matplotlib==3.1.0
+matplotlib==2.2.3
 mistune==0.8.4
 mock==3.0.5
 nbconvert==5.5.0
@@ -45,6 +50,7 @@ packaging==19.0
 pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.4.0
+patsy==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 prometheus-client==0.7.0
@@ -62,10 +68,15 @@ PyYAML==5.1.1
 pyzmq==18.0.1
 qtconsole==4.5.1
 requests==2.22.0
-scipy==1.3.0
+scikit-learn==0.21.2
+scipy==1.2.0
+seaborn==0.9.0
 Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
+statsmodels==0.9.0
 tabulate==0.8.3
+talos==0.4.9
 tb-nightly==1.14.0a20190603
 tensorboard==1.13.1
 tensorflow==2.0.0b1
@@ -83,4 +94,5 @@ wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.15.4
 widgetsnbextension==3.4.2
+wrangle==0.6.4
 wrapt==1.11.1
